...
import '../models/equipment.dart';

class MockRecipeRepository implements RecipeRepository {
  static final List<Recipe> _recipes = [
    Recipe(
      recipeId: 1,
      title: 'Penne Alla Vodka',
      photoUrl:
          'https://plus.unsplash.com/premium_photo-1664478288635-b9703a502393?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0',
      description:
          'A classic Italian-American pasta with a rich, creamy tomato and vodka sauce finished with Parmesan and fresh herbs. Comforting and deeply flavourful.',
      cuisineType: 'italian',
      prepTimeMins: 5,
...
