...
                        ),
                      ),
                    ),
                    PopupMenuItem(
                      value: 'delete-list',
                      child: Text(
                        'Delete list',
                        style: AppTextStyles.body.copyWith(
                          color: AppColors.error,
                          fontWeight: FontWeight.w700,
                        ),
                      ),
                    ),
...
