appId: com.mealchemy.mealchemy
name: Log in and show off automatic shopping list generation
---

# Log in
- runFlow: auth-login.yaml

# Navigate to global vault
- tapOn:
    text: "DISCOVER"
- tapOn: "Penne Alla Vodka"

# Turn into shopping list- tapOn:
- tapOn:
    point: 75%,7%
- tapOn:
    point: 4%,7%
- tapOn: "VAULT"
- tapOn:
    point: 83%,7%
- tapOn: "Penne Alla Vodka"
- scrollUntilVisible:
    element: "Cheese, parmesan, hard\n-"





